# charger-tester-gui

./: .gitignore  test.py
prog/: CMakeLists.txt  TODO.md
prog/src/: CMakeLists.txt  main.cpp
prog/src/app/: MainWindow.cpp  MainWindow.h
prog/src/app/pages/: LoadControlPage.cpp  LoadControlPage.h  MonitoringPage.cpp  MonitoringPage.h  ProtocolAnalysisPage.cpp  ProtocolAnalysisPage.h  SettingsPage.cpp  SettingsPage.h
prog/src/io/: SerialPortConfig.h  SerialPortManager.cpp  SerialPortManager.h  SerialWorker.cpp  SerialWorker.h
prog/src/protocol/: ChargerTypes.h  CommandBuilder.cpp  CommandBuilder.h  ProtocolParser.cpp  ProtocolParser.h
prog/src/utils/: ThemeUtils.cpp  ThemeUtils.h
prog/src/widgets/: LcdPanelWidget.cpp  LcdPanelWidget.h  MonitoringChart.cpp  MonitoringChart.h  ProtocolStatusBar.cpp  ProtocolStatusBar.h
